# ml-experiment-hub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Makefile  PROGRESS.md  README.md  VERIFY_DB_FIX.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pyproject.toml.bak  pyproject.toml.bak2  verify_monitor_integration.py
adapters/: __init__.py  base.py  huggingface.py  pytorch_lightning.py
adapters/dummy_classifier/: __init__.py  adapter.py  evaluator.py  model.py  train.py
adapters/vlm_quantization/: __init__.py  adapter.py  evaluator.py  hash_layer.py  index_builder.py  model.py  search.py
agent/: collector.py  main.py
alembic/: env.py
alembic/versions/: 0001_initial_all_tables.py  0002_experiment_project_snapshot.py  430b08747772_add_servers_and_system_history.py  b3f9a1c2d4e5_extend_projects_add_git_credentials.py  c2fe5ac0d414_initial_create_core_tables.py  eada77caf3d3_add_projects_table_and_experiment_.py
backend/: Dockerfile  __init__.py  config.py  entrypoint.sh  main.py
backend/api/: __init__.py  (+18 more)
configs/: dgx_spark.yaml
docs/: new-adapter-guide.md  vlm-quantization-integration.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ml_experiment_hub/: smoke.py
scripts/: create_dummy_checkpoint.py  deploy.sh  dev.sh  gate.sh  reset-db.sh  setup.sh  setup_dgx.sh
shared/: __init__.py  schemas.py  utils.py
tests/: test_config_roundtrip.py  test_milestone2.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6.py  test_milestone7.py
tickets/: t-001-auto-collect-metrics.md  t-002-summary-checkpoints-api.md  t-003-compare-api.md  t-004-compare-frontend-fix.md  t-005-smoke-test.md  t-006-inference-internalization.md  t-007-dummy-checkpoint.md  t-008-job-management.md  t-009-eval-job-api.md  t-010-index-build-job.md  t-011-search-api.md  t-012-search-demo-frontend.md  t-013-eval-compare-table.md  t-014-smoke-test-m3.md  t-100-models-migration.md  t-101-enhanced-scan.md  t-102-clone-service.md  t-103-filesystem-upload-pull.md  t-104-git-credentials.md  t-105-template-registry.md  t-106-frontend-types-api.md  t-107-project-create-4tab.md  t-108-project-pages-update.md
tools/: codex_dispatch.sh
(+124 files in other folders)
