[project]
name = "ml-experiment-hub"
version = "0.1.0"
description = "A platform for managing, running, and monitoring machine learning experiments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "greenlet>=3.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "shared*", "adapters*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
]
